rascaline-c-api/include/rascaline.h


#define RASCAL_SUCCESS 0
#define RASCAL_INVALID_PARAMETER_ERROR 1
#define RASCAL_JSON_ERROR 2
#define RASCAL_UTF8_ERROR 3
#define RASCAL_CHEMFILES_ERROR 4
#define RASCAL_SYSTEM_ERROR 128
#define RASCAL_BUFFER_SIZE_ERROR 254
#define RASCAL_INTERNAL_ERROR 255
#define RASCAL_LOG_LEVEL_ERROR 1
#define RASCAL_LOG_LEVEL_WARN 2
#define RASCAL_LOG_LEVEL_INFO 3
#define RASCAL_LOG_LEVEL_DEBUG 4
#define RASCAL_LOG_LEVEL_TRACE 5
typedef struct rascal_calculator_t rascal_calculator_t;
typedef int32_t rascal_status_t;
typedef void (*rascal_logging_callback_t)(int32_t level, const char *message);
typedef struct rascal_pair_t {
  uintptr_t first;
  uintptr_t second;
  double distance;
  double vector[3];
  int32_t cell_shift_indices[3];
} rascal_pair_t;
typedef struct rascal_system_t {
  void *user_data;
  rascal_status_t (*size)(const void *user_data, uintptr_t *size);
  rascal_status_t (*types)(const void *user_data, const int32_t **types);
  rascal_status_t (*positions)(const void *user_data, const double **positions);
  rascal_status_t (*cell)(const void *user_data, double *cell);
  rascal_status_t (*compute_neighbors)(void *user_data, double cutoff);
  rascal_status_t (*pairs)(const void *user_data,
                           const struct rascal_pair_t **pairs,
                           uintptr_t *count);
  rascal_status_t (*pairs_containing)(const void *user_data,
                                      uintptr_t atom,
                                      const struct rascal_pair_t **pairs,
                                      uintptr_t *count);
} rascal_system_t;
typedef struct rascal_labels_selection_t {
  const mts_labels_t *subset;
  const mts_tensormap_t *predefined;
} rascal_labels_selection_t;
typedef struct rascal_calculation_options_t {
  const char *const *gradients;
  uintptr_t gradients_count;
  bool use_native_system;
  struct rascal_labels_selection_t selected_samples;
  struct rascal_labels_selection_t selected_properties;
  const mts_labels_t *selected_keys;
} rascal_calculation_options_t;
const char *rascal_last_error(void);
rascal_status_t rascal_set_logging_callback(rascal_logging_callback_t callback);
rascal_status_t rascal_basic_systems_read(const char *path,
                                          struct rascal_system_t **systems,
                                          uintptr_t *count);
rascal_status_t rascal_basic_systems_free(struct rascal_system_t *systems, uintptr_t count);
struct rascal_calculator_t *rascal_calculator(const char *name, const char *parameters);
rascal_status_t rascal_calculator_free(struct rascal_calculator_t *calculator);
rascal_status_t rascal_calculator_name(const struct rascal_calculator_t *calculator,
                                       char *name,
                                       uintptr_t bufflen);
rascal_status_t rascal_calculator_parameters(const struct rascal_calculator_t *calculator,
                                             char *parameters,
                                             uintptr_t bufflen);
rascal_status_t rascal_calculator_cutoffs(const struct rascal_calculator_t *calculator,
                                          const double **cutoffs,
                                          uintptr_t *cutoffs_count);
rascal_status_t rascal_calculator_compute(struct rascal_calculator_t *calculator,
                                          mts_tensormap_t **descriptor,
                                          struct rascal_system_t *systems,
                                          uintptr_t systems_count,
                                          struct rascal_calculation_options_t options);
rascal_status_t rascal_profiling_clear(void);
rascal_status_t rascal_profiling_enable(bool enabled);
rascal_status_t rascal_profiling_get(const char *format, char *buffer, uintptr_t bufflen);